test/spec_vectors/simd_f64x2_cmp/fail/module_18.wat
(module (func $f64x2.lt-arg-empty (result v128) (f64x2.lt)))